add hero text and hero div
add first main div for hero text and image placeholder

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 body{
     display: flex;
+    min-height: 100vh; 
     flex-direction: column;
     justify-content: space-between;
     margin: 0;
+  
 }
 
 *{
@@ -38,4 +40,49 @@ li{
     font-size: 18px; 
     gap: 20px; 
     padding: 0; 
+}
+
+.hero{
+    display: flex; 
+    background-color:#1f2937; 
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1; 
+}
+
+.placeholder{
+    margin: 0 20px; 
+    background-color: grey;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    width: 400px; 
+    height: 200px; 
+}
+
+.left-text{
+    width: 400px;
+}
+
+.hero-text{
+    font-size: 48px;
+    font-weight: 800; 
+    color: #f9faf8;
+    margin: 0; 
+}
+
+.hero-subtext, p{
+    font-size: 18px; 
+    margin: 0; 
+    color: #e5e7eb;
+}
+
+.button{
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+    padding: 8px 30px;  
+    text-align: center;
+    border-radius: 10px; 
+    margin-top: 15px; 
 }
