--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ li{
     justify-content: center;
     align-items: center;
     flex-grow: 1; 
+    padding: 50px
 }
 
 .placeholder{
@@ -71,7 +72,7 @@ li{
     margin: 0; 
 }
 
-.hero-subtext, p{
+.hero-subtext{
     font-size: 18px; 
     margin: 0; 
     color: #e5e7eb;
@@ -85,4 +86,111 @@ li{
     text-align: center;
     border-radius: 10px; 
     margin-top: 15px; 
+}
+
+.card-div{
+    background-color: white;
+    flex-grow: 1; 
+    padding: 30px
+}
+
+.card-header{
+    display: flex; 
+    justify-content: center;
+    font-size: 36px; 
+    font-weight: 800;
+    color: #1f2937;
+    margin: 30px 0px 30px 0px; 
+}
+
+.cards{
+    display: flex; 
+    justify-content: center;
+    gap: 80px; 
+}
+
+.card{
+    display: flex; 
+    flex-direction: column;
+    align-items: center; 
+    width: 150px; 
+
+}
+
+.box{  
+    width: 150px; 
+    height: 150px; 
+    border: solid; 
+    border-color: #3882f6;
+    border-radius: 10px; 
+}
+
+.quote-div{
+    display: flex; 
+    flex-direction: column;
+    background-color: #E5e7eb;
+}
+
+.quote-container{
+    align-self: center; 
+    display: flex; 
+    flex-direction: column;
+    width: 50em; 
+    padding: 30px;
+}
+.quote{
+    font-size: 36px;
+    font-style: italic; 
+    font-weight: 300;
+    margin-bottom: 10px;
+    color: #1F2937
+}
+
+.author{
+    margin: 0; 
+    align-self:flex-end;
+    font-size: 25px;
+    font-weight: bold; 
+}
+
+.call-div{
+    padding: 100px 200px; 
+}
+
+.blue-call-div{
+    background-color: #3882f6;
+    display: flex; 
+    justify-content: space-around;
+    padding: 50px 30px; 
+    border-radius: 10px; 
+}
+
+.call-text{
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+}
+
+.call-header{
+    font-weight: bold; 
+    font-size: 25px;
+    color: white; 
+}
+
+
+.call-subtext{
+    color: #e5e7eb;
+}
+
+.button.button2{
+    border: solid; 
+}
+
+.footer{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    height: 5em; 
+    color: #E5E7Eb;
 }
